--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 14:05:29 2018</p>
+         Last Run: Wed Jul 11 15:05:26 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills 01 DA - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 12, 2018 -  6:30PM til  8:30PM</H4>
                <table class="table table-striped">
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 14:05:29 2018</p>
+         Last Run: Wed Jul 11 15:05:26 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -272,7 +272,7 @@
                         <td>11</td>
                         <td>11</td>
                         <td>32</td>
-                        <td>78</td>
+                        <td>79</td>
                         <td>2</td>
                         <td>16</td>
                         <td>NW</td>
@@ -304,27 +304,27 @@
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Overcast</td>
                         <td>16</td>
                         <td>16</td>
-                        <td>1</td>
+                        <td>15</td>
                         <td>46</td>
-                        <td>5</td>
+                        <td>4</td>
                         <td>13</td>
                         <td>NW</td>
-                        <td>74</td>
+                        <td>82</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>18</td>
                         <td>18</td>
-                        <td>1</td>
+                        <td>15</td>
                         <td>40</td>
-                        <td>6</td>
+                        <td>5</td>
                         <td>10</td>
                         <td>NW</td>
-                        <td>66</td>
+                        <td>76</td>
                      </tr>
                   </tbody>
                </table>
@@ -443,8 +443,8 @@
                  "32",
                  "11",
                  "5",
-                 "1",
-                 "1"
+                 "15",
+                 "15"
                ]
              },
              {
@@ -452,7 +452,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "78",
+                 "79",
                  "67",
                  "54",
                  "46",
@@ -467,8 +467,8 @@
                  "72",
                  "77",
                  "79",
-                 "74",
-                 "66"
+                 "82",
+                 "76"
                ]
              }
            ]
@@ -485,7 +485,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 14:05:29 2018</p>
+         Last Run: Wed Jul 11 15:05:26 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -519,8 +519,8 @@
                      <tr>
                         <td>10:00 AM</td>
                         <td>Clear</td>
-                        <td>17</td>
-                        <td>17</td>
+                        <td>18</td>
+                        <td>18</td>
                         <td>0</td>
                         <td>45</td>
                         <td>3</td>
@@ -561,7 +561,7 @@
                         <td>34</td>
                         <td>7</td>
                         <td>13</td>
-                        <td>S</td>
+                        <td>SSE</td>
                         <td>6</td>
                      </tr>
                   </tbody>
@@ -609,7 +609,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "15",
-                 "17",
+                 "18",
                  "19",
                  "21",
                  "22"
@@ -622,7 +622,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "15",
-                 "17",
+                 "18",
                  "19",
                  "21",
                  "22"
@@ -723,7 +723,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 14:05:29 2018</p>
+         Last Run: Wed Jul 11 15:05:26 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -745,38 +745,38 @@
                      <tr>
                         <td>06:00 PM</td>
                         <td>Clear</td>
-                        <td>25</td>
-                        <td>25</td>
+                        <td>24</td>
+                        <td>24</td>
                         <td>0</td>
-                        <td>30</td>
+                        <td>32</td>
                         <td>2</td>
-                        <td>14</td>
-                        <td>ESE</td>
-                        <td>20</td>
+                        <td>16</td>
+                        <td>E</td>
+                        <td>3</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Clear</td>
-                        <td>24</td>
-                        <td>24</td>
+                        <td>23</td>
+                        <td>23</td>
                         <td>0</td>
-                        <td>34</td>
+                        <td>35</td>
                         <td>1</td>
-                        <td>16</td>
-                        <td>E</td>
-                        <td>16</td>
+                        <td>18</td>
+                        <td>ENE</td>
+                        <td>3</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Clear</td>
-                        <td>22</td>
-                        <td>22</td>
+                        <td>21</td>
+                        <td>21</td>
                         <td>0</td>
                         <td>40</td>
                         <td>0</td>
-                        <td>16</td>
-                        <td>ESE</td>
-                        <td>13</td>
+                        <td>18</td>
+                        <td>E</td>
+                        <td>3</td>
                      </tr>
                   </tbody>
                </table>
@@ -820,9 +820,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "25",
                  "24",
-                 "22"
+                 "23",
+                 "21"
                ]
              },
              {
@@ -831,9 +831,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "25",
                  "24",
-                 "22"
+                 "23",
+                 "21"
                ]
              }
            ]
@@ -894,8 +894,8 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "30",
-                 "34",
+                 "32",
+                 "35",
                  "40"
                ]
              },
@@ -904,9 +904,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "20",
-                 "16",
-                 "13"
+                 "3",
+                 "3",
+                 "3"
                ]
              }
            ]
@@ -923,7 +923,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 14:05:29 2018</p>
+         Last Run: Wed Jul 11 15:05:26 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -952,15 +952,15 @@
                         <td>1</td>
                         <td>18</td>
                         <td>SE</td>
-                        <td>10</td>
+                        <td>9</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Clear</td>
-                        <td>25</td>
-                        <td>25</td>
+                        <td>26</td>
+                        <td>26</td>
                         <td>1</td>
-                        <td>36</td>
+                        <td>35</td>
                         <td>0</td>
                         <td>16</td>
                         <td>ESE</td>
@@ -974,9 +974,9 @@
                         <td>24</td>
                         <td>43</td>
                         <td>0</td>
-                        <td>16</td>
+                        <td>14</td>
                         <td>E</td>
-                        <td>8</td>
+                        <td>7</td>
                      </tr>
                   </tbody>
                </table>
@@ -1021,7 +1021,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "27",
-                 "25",
+                 "26",
                  "23"
                ]
              },
@@ -1032,7 +1032,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "27",
-                 "25",
+                 "26",
                  "23"
                ]
              }
@@ -1095,7 +1095,7 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "30",
-                 "36",
+                 "35",
                  "43"
                ]
              },
@@ -1104,9 +1104,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "10",
                  "9",
-                 "8"
+                 "9",
+                 "7"
                ]
              }
            ]
