--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 15:05:26 2018</p>
+         Last Run: Wed Jul 11 16:05:14 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills 01 DA - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 12, 2018 -  6:30PM til  8:30PM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>26</td>
                         <td>26</td>
                         <td>0</td>
-                        <td>33</td>
+                        <td>34</td>
                         <td>4</td>
                         <td>8</td>
                         <td>SSE</td>
-                        <td>10</td>
+                        <td>18</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
@@ -46,11 +46,11 @@
                         <td>25</td>
                         <td>25</td>
                         <td>0</td>
-                        <td>32</td>
+                        <td>33</td>
                         <td>2</td>
                         <td>10</td>
                         <td>S</td>
-                        <td>13</td>
+                        <td>15</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>25</td>
                         <td>25</td>
                         <td>0</td>
-                        <td>33</td>
+                        <td>34</td>
                         <td>1</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>18</td>
+                        <td>15</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -74,7 +74,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>13</td>
+                        <td>14</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -86,7 +86,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>SE</td>
-                        <td>8</td>
+                        <td>9</td>
                      </tr>
                   </tbody>
                </table>
@@ -214,9 +214,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "34",
                  "33",
-                 "32",
-                 "33",
+                 "34",
                  "37",
                  "44"
                ]
@@ -226,11 +226,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "10",
-                 "13",
                  "18",
-                 "13",
-                 "8"
+                 "15",
+                 "15",
+                 "14",
+                 "9"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 15:05:26 2018</p>
+         Last Run: Wed Jul 11 16:05:14 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -268,62 +268,62 @@
                   <tbody>
                      <tr>
                         <td>10:00 AM</td>
-                        <td>Chance of Rain</td>
+                        <td>Mostly Cloudy</td>
                         <td>11</td>
                         <td>11</td>
-                        <td>32</td>
-                        <td>79</td>
+                        <td>24</td>
+                        <td>76</td>
                         <td>2</td>
-                        <td>16</td>
-                        <td>NW</td>
-                        <td>72</td>
+                        <td>14</td>
+                        <td>NNW</td>
+                        <td>70</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Mostly Cloudy</td>
-                        <td>12</td>
-                        <td>12</td>
-                        <td>11</td>
-                        <td>67</td>
-                        <td>3</td>
+                        <td>13</td>
+                        <td>13</td>
+                        <td>10</td>
+                        <td>64</td>
+                        <td>4</td>
                         <td>14</td>
                         <td>NNW</td>
-                        <td>77</td>
+                        <td>74</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>14</td>
-                        <td>14</td>
-                        <td>5</td>
-                        <td>54</td>
+                        <td>15</td>
+                        <td>15</td>
+                        <td>4</td>
+                        <td>51</td>
                         <td>4</td>
                         <td>14</td>
                         <td>NNW</td>
-                        <td>79</td>
+                        <td>75</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Overcast</td>
-                        <td>16</td>
-                        <td>16</td>
+                        <td>17</td>
+                        <td>17</td>
                         <td>15</td>
-                        <td>46</td>
+                        <td>44</td>
                         <td>4</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>NW</td>
                         <td>82</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>18</td>
-                        <td>18</td>
+                        <td>19</td>
+                        <td>19</td>
                         <td>15</td>
-                        <td>40</td>
+                        <td>39</td>
                         <td>5</td>
                         <td>10</td>
-                        <td>NW</td>
+                        <td>NNW</td>
                         <td>76</td>
                      </tr>
                   </tbody>
@@ -371,10 +371,10 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "11",
-                 "12",
-                 "14",
-                 "16",
-                 "18"
+                 "13",
+                 "15",
+                 "17",
+                 "19"
                ]
              },
              {
@@ -384,10 +384,10 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "11",
-                 "12",
-                 "14",
-                 "16",
-                 "18"
+                 "13",
+                 "15",
+                 "17",
+                 "19"
                ]
              }
            ]
@@ -440,9 +440,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "32",
-                 "11",
-                 "5",
+                 "24",
+                 "10",
+                 "4",
                  "15",
                  "15"
                ]
@@ -452,11 +452,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "79",
-                 "67",
-                 "54",
-                 "46",
-                 "40"
+                 "76",
+                 "64",
+                 "51",
+                 "44",
+                 "39"
                ]
              },
              {
@@ -464,9 +464,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "72",
-                 "77",
-                 "79",
+                 "70",
+                 "74",
+                 "75",
                  "82",
                  "76"
                ]
@@ -485,7 +485,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 15:05:26 2018</p>
+         Last Run: Wed Jul 11 16:05:14 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -514,19 +514,19 @@
                         <td>2</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>3</td>
+                        <td>5</td>
                      </tr>
                      <tr>
                         <td>10:00 AM</td>
                         <td>Clear</td>
-                        <td>18</td>
-                        <td>18</td>
+                        <td>17</td>
+                        <td>17</td>
                         <td>0</td>
                         <td>45</td>
                         <td>3</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>SSW</td>
-                        <td>4</td>
+                        <td>10</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -536,9 +536,9 @@
                         <td>0</td>
                         <td>41</td>
                         <td>4</td>
-                        <td>13</td>
+                        <td>10</td>
                         <td>S</td>
-                        <td>4</td>
+                        <td>19</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -546,11 +546,11 @@
                         <td>21</td>
                         <td>21</td>
                         <td>0</td>
-                        <td>37</td>
+                        <td>35</td>
                         <td>6</td>
-                        <td>13</td>
+                        <td>10</td>
                         <td>S</td>
-                        <td>5</td>
+                        <td>24</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -558,11 +558,11 @@
                         <td>22</td>
                         <td>22</td>
                         <td>0</td>
-                        <td>34</td>
+                        <td>32</td>
                         <td>7</td>
-                        <td>13</td>
-                        <td>SSE</td>
-                        <td>6</td>
+                        <td>11</td>
+                        <td>S</td>
+                        <td>18</td>
                      </tr>
                   </tbody>
                </table>
@@ -609,7 +609,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "15",
-                 "18",
+                 "17",
                  "19",
                  "21",
                  "22"
@@ -622,7 +622,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "15",
-                 "18",
+                 "17",
                  "19",
                  "21",
                  "22"
@@ -693,8 +693,8 @@
                  "53",
                  "45",
                  "41",
-                 "37",
-                 "34"
+                 "35",
+                 "32"
                ]
              },
              {
@@ -702,11 +702,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "3",
-                 "4",
-                 "4",
                  "5",
-                 "6"
+                 "10",
+                 "19",
+                 "24",
+                 "18"
                ]
              }
            ]
@@ -723,7 +723,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 15:05:26 2018</p>
+         Last Run: Wed Jul 11 16:05:14 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -748,11 +748,11 @@
                         <td>24</td>
                         <td>24</td>
                         <td>0</td>
-                        <td>32</td>
+                        <td>31</td>
                         <td>2</td>
                         <td>16</td>
-                        <td>E</td>
-                        <td>3</td>
+                        <td>ESE</td>
+                        <td>2</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -760,7 +760,7 @@
                         <td>23</td>
                         <td>23</td>
                         <td>0</td>
-                        <td>35</td>
+                        <td>34</td>
                         <td>1</td>
                         <td>18</td>
                         <td>ENE</td>
@@ -772,7 +772,7 @@
                         <td>21</td>
                         <td>21</td>
                         <td>0</td>
-                        <td>40</td>
+                        <td>39</td>
                         <td>0</td>
                         <td>18</td>
                         <td>E</td>
@@ -894,9 +894,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "32",
-                 "35",
-                 "40"
+                 "31",
+                 "34",
+                 "39"
                ]
              },
              {
@@ -904,7 +904,7 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "3",
+                 "2",
                  "3",
                  "3"
                ]
@@ -923,7 +923,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 15:05:26 2018</p>
+         Last Run: Wed Jul 11 16:05:14 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -945,38 +945,38 @@
                      <tr>
                         <td>07:00 PM</td>
                         <td>Clear</td>
-                        <td>27</td>
-                        <td>27</td>
+                        <td>26</td>
+                        <td>26</td>
                         <td>0</td>
-                        <td>30</td>
+                        <td>32</td>
                         <td>1</td>
                         <td>18</td>
                         <td>SE</td>
-                        <td>9</td>
+                        <td>3</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Clear</td>
-                        <td>26</td>
-                        <td>26</td>
+                        <td>24</td>
+                        <td>24</td>
                         <td>1</td>
-                        <td>35</td>
+                        <td>37</td>
                         <td>0</td>
                         <td>16</td>
                         <td>ESE</td>
-                        <td>9</td>
+                        <td>4</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
-                        <td>23</td>
-                        <td>23</td>
+                        <td>22</td>
+                        <td>22</td>
                         <td>24</td>
-                        <td>43</td>
+                        <td>45</td>
                         <td>0</td>
                         <td>14</td>
-                        <td>E</td>
-                        <td>7</td>
+                        <td>ESE</td>
+                        <td>4</td>
                      </tr>
                   </tbody>
                </table>
@@ -1020,9 +1020,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "27",
                  "26",
-                 "23"
+                 "24",
+                 "22"
                ]
              },
              {
@@ -1031,9 +1031,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "27",
                  "26",
-                 "23"
+                 "24",
+                 "22"
                ]
              }
            ]
@@ -1094,9 +1094,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "30",
-                 "35",
-                 "43"
+                 "32",
+                 "37",
+                 "45"
                ]
              },
              {
@@ -1104,9 +1104,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "9",
-                 "9",
-                 "7"
+                 "3",
+                 "4",
+                 "4"
                ]
              }
            ]
